# flightview-api

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  EPICS.md  PRD.md  README.md  STORYMAP.md  config.example.yaml  pyproject.toml
deploy/: skydial-api.service
sample_data/: demo_frames.json
skydial/: __init__.py  __main__.py  alerts.py  app.py  cache.py  config.py  debug_ui.py  enrichment.py  filters.py  geo.py  models.py  pipeline.py  profiles.py  scoring.py
skydial/data/: __init__.py  aircraft_types.py  airlines.py  routes.py
skydial/sources/: __init__.py  base.py  demo.py  dump1090.py
tests/: conftest.py  test_api.py  test_enrichment.py  test_geo.py  test_interesting.py  test_pipeline.py  test_scoring.py  test_sources.py
